# Kigyo

./: .anjuta_sym_db.db  .gitignore  Kigyo.sln  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
.deps/: kigyo-kigyo.Po  kigyo-linux.Po  kigyo-matrix.Po  kigyo-program.Po  kigyo-types.Po
Dokumentáció/: Kígyó játék.docx
Kigyo/: Kigyo.vcproj  kigyo.c  kigyo.h  linux.c  linux.h  matrix.c  matrix.h  program.c  types.c  types.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
