## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = kigyo 

kigyo_SOURCES = \
	Kigyo/kigyo.c \
	Kigyo/kigyo.h \
	Kigyo/linux.c \
	Kigyo/linux.h \
	Kigyo/matrix.c \
	Kigyo/matrix.h \
	Kigyo/program.c \
	Kigyo/types.h \
	Kigyo/types.c

kigyo_CFLAGS = \
	-lncurses

kigyo_LDFLAGS = 

